fixed index and contact

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Joseph</title>
 </head>
+<body>
     <nav>
         <p><a href="index.html">About Joseph</a></p>
     </nav>
@@ -29,4 +30,5 @@
     <footer>
         <a href="index.html">&copy;Joseph Oh</a>
     </footer>
+</body>
 </html>
