--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
         </p> 
     </nav>
     <section class = "intro">
+        <img class = "img1" src="images/arch.jpg" alt="arch" width="200" height="200">
+        <img class = "img2" src="images/sanford.jpg" alt="sanford" width="200" height="200">
         <h1>
             Joseph Oh    
         </h1>
         <h2>
-            I am a 4th year Computer Science Major at the University of Georgia.    
+            CS at UGA    
         </h2>
     </section>
     <section class = "about-me">
-        <img class = "me" src="images/ME.jpg" alt="Joseph Oh" width="300" height="300">
+        <img class = "me" src="images/ME.jpg" alt="Joseph Oh" width="200" height="200">
         <h2>
             Hello!!!
         </h2>
         <p>
-            I am interested in becoming a full stack engineer.
+            I am a 4th year Computer Science Major at the University of Georgia. I am interested in becoming a full stack engineer.
         </p>
         <hr />
         <h2>
